# qt_hello

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/qt_hello/: CMakeLists.txt  simple_dialog.hpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  simple_dialog.cpp
ui/: simple_dialog.ui
