<package>
  <name>dslam_viewer</name>
  <version>0.2.0</version>
  <description>
     Opengl monitoring utility for dslam.
  </description>
  <url type="repository">https://bitbucket.org/yujinrobot/dslam_desktop</url>
  <url type="bugtracker">https://bitbucket.org/yujinrobot/dslam_desktop/issues</url>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>Yujin Robot</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dslam_common</build_depend>
  <build_depend>ecl_linear_algebra</build_depend>
  <build_depend>libqglviewer-qt4-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>sophus</build_depend>
  
  <run_depend>dslam_common</run_depend>
  <run_depend>ecl_linear_algebra</run_depend>
  <run_depend>libqglviewer-qt4</run_depend>
  <run_depend>libqt4</run_depend>
  <run_depend>sophus</run_depend>
</package>
